fix artikel sweager
